# heill

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx
frontend/app/api/chat/: route.ts
frontend/app/chat/: page.tsx
frontend/app/chat/components/: ChatInput.tsx  ItineraryCard.tsx  MessageBubble.tsx  ToolStatusBanner.tsx
frontend/hooks/: useHeillChat.ts
heill/: agent.py  main.py  prompts.py  session.py
heill/data/: sportscations.yaml
heill/models/: itinerary.py  session.py  tools.py
heill/scrapers/: browser_pool.py  config.yaml  sports_registry.yaml
heill/scrapers/extractors/: booking_com.py  generic.py  google_flights.py  structured.py
heill/tools/: accommodation.py  browse_page.py  exchange_rate.py  flights.py  registry.py  sport_activities.py  web_search.py
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_sessions.sql
