[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heill"
version = "0.1.0"
description = "AI-powered sports travel agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.4.0",
    "openai>=1.35.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "duckduckgo-search>=6.2.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "slowapi>=0.1.9",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["heill"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
